# owner-openManus

./: .gitignore  README.md  main.py  pyproject.toml  学习指南.md
app/: config.py  llm.py  logger.py  schema.py
app/agent/: base.py  manus.py  react.py  tool_call.py
app/prompt/: manus.py
app/tool/: base.py  bower_use_tool.py  tool_collection.py
config/: config.toml
