[project]
name = "owner-openmanus"
version = "0.1.0"
description = ""
authors = [
    {name = "黑黑的脸蛋",email = "hl13110204537@163.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pydantic (>=2.12.4,<3.0.0)",
    "openai (>=1.99.2,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "browser-use (>=0.9.5,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
